# clawdbot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
n8n_workflows/: README.md
openclaw/: __init__.py  config.py  main.py
openclaw/agent/: claude_agent.py  conversation.py  system_prompt.py  tool_registry.py
openclaw/bot/: application.py  handlers.py  keyboards.py  middleware.py
openclaw/n8n/: client.py  response_parser.py  webhook_map.py
openclaw/security/: allowlist.py  rate_limiter.py  signature.py
openclaw/utils/: logging.py  retry.py
tests/: conftest.py
tests/test_agent/: test_github_tools.py  test_tool_registry.py
tests/test_bot/: test_handlers.py
tests/test_n8n/: test_signature.py  test_webhook_map.py
tests/test_security/: test_rate_limiter.py
